--- a/tab_override.html
+++ b/tab_override.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Spot Play</title>
+    <title>Coding the next big thing </title>
     <style>
         body {
             background-color: #000000;
