--- a/tab_override.html
+++ b/tab_override.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="container">
-        <iframe src="https://spot-play.vercel.app/" width="100%" height="100%"></iframe>
+        <iframe src="https://code-play-web.vercel.app/" width="100%" height="100%"></iframe>
     </div>
 </body>
 
